[gd_scene load_steps=9 format=3 uid="uid://cxb2kwaunixau"]

[ext_resource type="Script" path="res://Script/UI/ChartEditor/CreateChartButtonActions.gd" id="1_5sqwv"]
[ext_resource type="AudioStream" uid="uid://ci61wy07mmr" path="res://Scene/UISetting/UIAudioPlayer.tres" id="2_6wbnb"]
[ext_resource type="Texture2D" uid="uid://8pamryb7w7ea" path="res://Resource/UI/MethodBox.Rect.900_800.png" id="3_1of3h"]
[ext_resource type="LabelSettings" uid="uid://ddufsaqy51v4r" path="res://Scene/UISetting/H1LabelSetting.tres" id="4_ltft1"]
[ext_resource type="LabelSettings" uid="uid://cmv4vthrw7q4o" path="res://Scene/UISetting/DefaultLabelSetting.tres" id="5_dhrfv"]
[ext_resource type="Theme" uid="uid://dwhv0gjxdlx1w" path="res://Scene/UISetting/ChartEditorThemeSetting.tres" id="6_pam87"]
[ext_resource type="FontFile" uid="uid://dtj5kk5lg0mny" path="res://Font/Alibaba_PuHuiTi_2.0_35_Thin_35_Thin.ttf" id="7_0d28c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oaoa"]
bg_color = Color(0.964706, 0.886275, 0.952941, 1)

[node name="CreateDialogWindows" type="Control" node_paths=PackedStringArray("PathLabel", "MusicPlayer", "_MusicName", "_ChartName", "_ArtistName", "_DefaultBPM")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5sqwv")
PathLabel = NodePath("Sprite2D/OpenMusicFile/Path")
MusicStream = ExtResource("2_6wbnb")
MusicPlayer = NodePath("AudioStreamPlayer2D")
_MusicName = NodePath("Sprite2D/NameInput/NameLineEdit")
_ChartName = NodePath("Sprite2D/Chart/CharterInput")
_ArtistName = NodePath("Sprite2D/ArtistName/NameLineEdit")
_DefaultBPM = NodePath("Sprite2D/BPMInput/NameLineEdit")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(941, 506)
texture = ExtResource("3_1of3h")

[node name="Title" type="Label" parent="Sprite2D"]
offset_left = -250.0
offset_top = -375.0
offset_right = 232.0
offset_bottom = -261.0
text = "创建谱面文件"
label_settings = ExtResource("4_ltft1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chart" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -149.0
offset_top = -154.0
offset_right = -109.0
offset_bottom = -114.0

[node name="Charter" type="Label" parent="Sprite2D/Chart"]
layout_mode = 0
offset_left = -176.0
offset_top = 8.0
offset_right = -41.0
offset_bottom = 47.0
text = "谱师名"
label_settings = ExtResource("5_dhrfv")

[node name="CharterInput" type="LineEdit" parent="Sprite2D/Chart"]
layout_mode = 0
offset_right = 432.0
offset_bottom = 55.0
theme = ExtResource("6_pam87")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_0d28c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1oaoa")
text = "输入谱师名称"
placeholder_text = "输入谱师名称"

[node name="NameInput" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -149.0
offset_top = -242.0
offset_right = -109.0
offset_bottom = -202.0

[node name="Name" type="Label" parent="Sprite2D/NameInput"]
layout_mode = 0
offset_left = -176.0
offset_top = 8.0
offset_right = -41.0
offset_bottom = 47.0
text = "谱面名称"
label_settings = ExtResource("5_dhrfv")

[node name="NameLineEdit" type="LineEdit" parent="Sprite2D/NameInput"]
layout_mode = 0
offset_right = 432.0
offset_bottom = 55.0
theme = ExtResource("6_pam87")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_0d28c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1oaoa")
text = "输入谱面名称"
placeholder_text = "输入谱面名称"

[node name="Create" type="Button" parent="Sprite2D"]
offset_left = 131.0
offset_top = 278.0
offset_right = 318.0
offset_bottom = 356.0
theme = ExtResource("6_pam87")
theme_override_font_sizes/font_size = 32
text = "创建"

[node name="Cancel" type="Button" parent="Sprite2D"]
offset_left = -293.0
offset_top = 278.0
offset_right = -106.0
offset_bottom = 356.0
theme = ExtResource("6_pam87")
theme_override_font_sizes/font_size = 32
text = "取消"

[node name="BPMInput" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -149.0
offset_top = 46.0
offset_right = -109.0
offset_bottom = 86.0

[node name="Name" type="Label" parent="Sprite2D/BPMInput"]
layout_mode = 0
offset_left = -176.0
offset_top = 8.0
offset_right = -41.0
offset_bottom = 47.0
text = "默认BPM"
label_settings = ExtResource("5_dhrfv")

[node name="NameLineEdit" type="LineEdit" parent="Sprite2D/BPMInput"]
layout_mode = 0
offset_right = 432.0
offset_bottom = 55.0
theme = ExtResource("6_pam87")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_0d28c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1oaoa")
text = "输入默认BPM"
placeholder_text = "输入默认BPM"

[node name="OpenMusicFile" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Sprite2D/OpenMusicFile"]
layout_mode = 0
offset_left = -149.0
offset_top = -58.0
offset_right = 43.0
offset_bottom = 6.0
theme = ExtResource("6_pam87")
theme_override_font_sizes/font_size = 32
text = "打开文件"

[node name="Name" type="Label" parent="Sprite2D/OpenMusicFile"]
layout_mode = 0
offset_left = -325.0
offset_top = -50.0
offset_right = -190.0
offset_bottom = -11.0
text = "音源"
label_settings = ExtResource("5_dhrfv")

[node name="Path" type="Label" parent="Sprite2D/OpenMusicFile"]
layout_mode = 0
offset_left = 75.0
offset_top = -42.0
offset_right = 323.0
offset_bottom = -2.0
text = "音频文件"
label_settings = ExtResource("5_dhrfv")
vertical_alignment = 1

[node name="ArtistName" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -146.86
offset_top = 150.0
offset_right = -106.86
offset_bottom = 190.0

[node name="Name" type="Label" parent="Sprite2D/ArtistName"]
layout_mode = 0
offset_left = -176.0
offset_top = 8.0
offset_right = -41.0
offset_bottom = 47.0
text = "曲师名"
label_settings = ExtResource("5_dhrfv")

[node name="NameLineEdit" type="LineEdit" parent="Sprite2D/ArtistName"]
layout_mode = 0
offset_right = 432.0
offset_bottom = 55.0
theme = ExtResource("6_pam87")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_0d28c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1oaoa")
text = "输入曲师名"
placeholder_text = "输入曲师名"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6wbnb")

[connection signal="button_down" from="Sprite2D/Create" to="." method="_on_create_button_down"]
[connection signal="button_down" from="Sprite2D/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="Sprite2D/OpenMusicFile/Button" to="." method="_open_music_file"]
